# basm

./: '  Cargo.toml  README.md  justfile  perf.data  perf.data.old
.cargo/: config.toml
basm/: Cargo.toml
basm-fmt/: Cargo.toml
basm-fmt/src/: lib.rs  main.rs  test.rs
basm-ls/: Cargo.toml
basm-ls/samples/: hello-world.basm  print-any.basm  yeah.basm
basm-ls/src/: lib.rs  main.rs  semantic_tokens.rs
basm-parse/: Cargo.toml
basm-parse/src/: 0-hello-world.asm  1-print-any.asm  lex.rs  lexer.rs  lib.rs  parser.rs  span.rs  test.rs
basm-parse/src/lex/: test.rs
basm-parse/src/lex/test/: 0-hello-world.asm  1-print-any.asm
basm-parse/src/lexer/: cursor.rs  lines.rs  test.rs  token.rs
basm-parse/src/lexer/lines/: error.rs  test.rs
basm-vm/: Cargo.toml
basm-vm/src/: decode.rs  decoder.rs  encode.rs  lib.rs  main.rs  reparse.rs
basm-vm/src/decoder/: test.rs
basm-vm/src/reparse/: test.rs
basm/src/: lex.rs  lib.rs  main.rs  parse.rs
basm/src/lex/: context.rs  private.rs  test.rs
basm/src/parse/: test.rs
test-sample/: 0-hello.asm  0-hello.basm  1-hello-name.asm  2-mini-math.asm  3-print-any.asm  3-print-any.basm  4-print-int.asm  5-write-file.asm  6-read-file.asm  7-hello.basm
